Fix tag overflow, closes #32

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -1156,6 +1156,7 @@ a.donate {
   }
 
   .browse-tag-list {
+    background-color: #F6F6F6;
     border-top: 1px solid #ddd;
     border-bottom: 1px solid #ddd;
     font-size: 12px;
@@ -1174,7 +1175,6 @@ a.donate {
     .browse-tag-v {
       display: inline-block;
       width: 50%;
-      height: 30px;
       float: left;
       padding: 6px 10px 6px $lineheight;
     }
@@ -1186,6 +1186,7 @@ a.donate {
 
     .browse-tag-v {
       border-left: 1px solid #ddd;
+      background-color: #fff;
     }
   }
 }
